[gd_scene load_steps=24 format=2]

[ext_resource path="res://fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/Robot_BuildBot.png" type="Texture" id=2]
[ext_resource path="res://fonts/RobotoCondensed-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/animations/Flames2.png" type="Texture" id=4]
[ext_resource path="res://sprites/animations/Flames3.png" type="Texture" id=5]
[ext_resource path="res://sprites/Rocket.png" type="Texture" id=6]
[ext_resource path="res://sprites/animations/Flames1.png" type="Texture" id=7]
[ext_resource path="res://levels/MainMenu.gd" type="Script" id=8]
[ext_resource path="res://sprites/animations/Trees2.png" type="Texture" id=9]
[ext_resource path="res://sprites/animations/Trees1.png" type="Texture" id=10]
[ext_resource path="res://music/Rolemusic - Shipwreck In The Pacific Ocean.mp3" type="AudioStream" id=11]
[ext_resource path="res://sprites/animations/Star2.png" type="Texture" id=12]
[ext_resource path="res://sprites/animations/Star3.png" type="Texture" id=13]
[ext_resource path="res://sprites/animations/Star1.png" type="Texture" id=14]

[sub_resource type="AnimatedTexture" id=8]
frames = 3
fps = 1.0
frame_0/texture = ExtResource( 14 )
frame_1/texture = ExtResource( 12 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 13 )
frame_2/delay_sec = 0.0

[sub_resource type="Animation" id=2]
resource_name = "BuildBot_Intro"
length = 7.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("BuildBot:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -168, -0.25, 0, 0.25, 0, 833, -0.25, 0, 0.25, 0, 78, -0.25, 0, 0.25, 0, 739, -0.25, 0, 0.25, 0, 450, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 3.5, 4.5, 5.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BuildBot:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 24, -0.25, 0, 0.25, 0, 122, -0.25, 0, 0.25, 0, 285, -0.25, 0, 0.25, 0, 311, -0.25, 0, 0.25, 0, 237, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 3.5, 4.5, 5.5 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("BuildBot:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 3.5, 4.5, 5.5, 6, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, true, false, true ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("VBoxContainer/StartingQuote:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("VBoxContainer/EndingQuote:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3, 6 )
}

[sub_resource type="Animation" id=5]
resource_name = "Fade_away"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("VBoxContainer/StartingQuote:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("VBoxContainer/StartingQuote:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("VBoxContainer/StartingQuote:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("VBoxContainer/StartingQuote:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("VBoxContainer/EndingQuote:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("VBoxContainer/EndingQuote:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("VBoxContainer/EndingQuote:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("VBoxContainer/EndingQuote:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("BuildBot:rect_position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 450, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("BuildBot:rect_position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 237, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("../BuildBot:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -158, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../BuildBot:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 72, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../BuildBot:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("BuildBot:rect_position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -168, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("BuildBot:rect_position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 24, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("BuildBot:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("VBoxContainer/StartingQuote:percent_visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("VBoxContainer/EndingQuote:percent_visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("VBoxContainer/StartingQuote:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("VBoxContainer/StartingQuote:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("VBoxContainer/StartingQuote:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("VBoxContainer/StartingQuote:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("VBoxContainer/EndingQuote:modulate:r")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("VBoxContainer/EndingQuote:modulate:g")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("VBoxContainer/EndingQuote:modulate:b")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("VBoxContainer/EndingQuote:modulate:a")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/16/type = "bezier"
tracks/16/path = NodePath("FinalLabel:percent_visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/17/type = "bezier"
tracks/17/path = NodePath("Rocket:rect_position:x")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"points": PoolRealArray( 624, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/18/type = "bezier"
tracks/18/path = NodePath("Rocket:rect_position:y")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"points": PoolRealArray( -57, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "RocketCrash"
length = 5.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("BuildBot:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 450, -0.25, 0, 0.25, 0, 450, -0.25, 0, 0.25, 0, 445, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.3, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BuildBot:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 237, -0.25, 0, 0.25, 0, 237, -0.25, 0, 0.25, 0, 946, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.3, 4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("FinalLabel:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5, 4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Rocket:rect_position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 624, -0.25, 0, 0.25, 0, 630, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Rocket:rect_position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -57, -0.25, 0, 0.25, 0, 967, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4 )
}

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="AnimatedTexture" id=7]
frames = 3
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 5 )
frame_2/delay_sec = 0.0

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 36
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Trees" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Trees"]
margin_left = -4.0
margin_top = 350.0
margin_right = 252.0
margin_bottom = 606.0
rect_min_size = Vector2( 256, 256 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Trees"]
margin_left = 803.0
margin_top = 365.0
margin_right = 1059.0
margin_bottom = 621.0
rect_min_size = Vector2( 256, 256 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="Trees"]
margin_left = 635.0
margin_top = 363.0
margin_right = 891.0
margin_bottom = 619.0
rect_min_size = Vector2( 256, 256 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Star" type="TextureRect" parent="Trees"]
margin_left = 144.0
margin_top = 69.0
margin_right = 184.0
margin_bottom = 117.0
rect_scale = Vector2( 1.66923, 0.975369 )
texture = SubResource( 8 )
expand = true

[node name="Star2" type="TextureRect" parent="Trees"]
modulate = Color( 0.992157, 0.909804, 0.584314, 1 )
margin_left = 756.0
margin_top = 159.0
margin_right = 796.0
margin_bottom = 207.0
rect_scale = Vector2( 1.66923, 0.975369 )
texture = SubResource( 8 )
expand = true

[node name="Star3" type="TextureRect" parent="Trees"]
modulate = Color( 0.921569, 0.705882, 0.705882, 1 )
margin_left = 352.0
margin_top = 267.0
margin_right = 392.0
margin_bottom = 315.0
rect_scale = Vector2( 1.66923, 0.975369 )
texture = SubResource( 8 )
expand = true

[node name="Star4" type="TextureRect" parent="Trees"]
modulate = Color( 0.694118, 0.901961, 0.937255, 1 )
margin_left = 553.0
margin_top = 76.0
margin_right = 593.0
margin_bottom = 124.0
rect_scale = Vector2( 1.66923, 0.975369 )
texture = SubResource( 8 )
expand = true

[node name="Star5" type="TextureRect" parent="Trees"]
margin_left = 870.0
margin_top = 279.0
margin_right = 910.0
margin_bottom = 327.0
rect_scale = Vector2( 1.66923, 0.975369 )
texture = SubResource( 8 )
expand = true

[node name="Star6" type="TextureRect" parent="Trees"]
margin_left = 445.0
margin_top = 370.0
margin_right = 485.0
margin_bottom = 418.0
rect_scale = Vector2( 1.66923, 0.975369 )
texture = SubResource( 8 )
expand = true

[node name="Star7" type="TextureRect" parent="Trees"]
modulate = Color( 0.694118, 0.901961, 0.937255, 1 )
margin_left = 79.0
margin_top = 216.0
margin_right = 119.0
margin_bottom = 264.0
rect_scale = Vector2( 1.66923, 0.975369 )
texture = SubResource( 8 )
expand = true

[node name="Star8" type="TextureRect" parent="Trees"]
margin_left = 832.0
margin_top = 52.0
margin_right = 872.0
margin_bottom = 100.0
rect_scale = Vector2( 1.66923, 0.975369 )
texture = SubResource( 8 )
expand = true

[node name="Star9" type="TextureRect" parent="Trees"]
modulate = Color( 0.921569, 0.705882, 0.705882, 1 )
margin_left = 832.0
margin_top = 52.0
margin_right = 872.0
margin_bottom = 100.0
rect_scale = Vector2( 1.66923, 0.975369 )
texture = SubResource( 8 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Cutscene" type="Control" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 496.0
size_flags_vertical = 3

[node name="Scene1" type="Control" parent="VBoxContainer/Cutscene"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BuildBot" type="TextureRect" parent="VBoxContainer/Cutscene/Scene1"]
margin_left = -168.0
margin_top = 24.0
margin_right = -39.9993
margin_bottom = 152.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Cutscene/Scene1"]
anims/BuildBot_Intro = SubResource( 2 )
anims/Fade_away = SubResource( 5 )
anims/RESET = SubResource( 3 )
anims/RocketCrash = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Cutscene/Scene1"]
anchor_right = 1.0
margin_bottom = 80.0

[node name="StartingQuote" type="Label" parent="VBoxContainer/Cutscene/Scene1/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 4 )
text = "Oh help me random human . . ."
percent_visible = 0.0

[node name="EndingQuote" type="Label" parent="VBoxContainer/Cutscene/Scene1/VBoxContainer"]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
text = "You're our only hope . . ."
align = 2
percent_visible = 0.0

[node name="Rocket" type="TextureRect" parent="VBoxContainer/Cutscene/Scene1"]
margin_left = 624.0
margin_top = -57.0
margin_right = 880.0
margin_bottom = 199.002
rect_min_size = Vector2( 256, 256 )
rect_rotation = 180.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Flame" type="TextureRect" parent="VBoxContainer/Cutscene/Scene1/Rocket"]
show_behind_parent = true
margin_left = 195.0
margin_top = 321.0
margin_right = 323.0
margin_bottom = 449.0
rect_min_size = Vector2( 128, 128 )
rect_rotation = 180.0
texture = SubResource( 7 )
expand = true
stretch_mode = 6

[node name="FinalLabel" type="Label" parent="VBoxContainer/Cutscene/Scene1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.5
margin_top = -19.0
margin_right = 142.5
margin_bottom = 19.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "The Hero has arrived..."
align = 1
valign = 1
percent_visible = 0.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 500.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 429.0
margin_top = 10.0
margin_right = 595.0
margin_bottom = 90.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 10

[node name="Play" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 166.0
margin_bottom = 35.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = SubResource( 1 )
text = "Play Standard"

[node name="PlayImpossible" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 166.0
margin_bottom = 80.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = SubResource( 1 )
text = "Play Impossible"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -30.0
autoplay = true

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -43.0
custom_fonts/font = SubResource( 9 )
text = "Made by JustDevDan"

[node name="Label2" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -43.0
margin_right = 300.0
custom_fonts/font = SubResource( 9 )
text = "Music: Rolemusic"

[connection signal="animation_finished" from="VBoxContainer/Cutscene/Scene1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/PlayImpossible" to="." method="_on_PlayImpossible_pressed"]
